--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
     <title>Movie Ratings</title>
 
     <style>
+      body{
+      background-color: #ffffff;
+      background-image: linear-gradient(-80deg, rgba(255,225,255,0.6) 0%, rgba(215,225,236,0.6) 85%), url('bg.jpg');
+      }
+
+      .container h1{
+        font-weight: bold;
+        color: #eee;
+      }
+
+      .table{
+        opacity: 0.7;
+        background-color: #f4f4f4;
+      }
+
       .stars-outer {
         position: relative;
         display: inline-block;
